# imac-algo-projet

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.hpp  main.cpp  player.cpp  player.hpp  settings.hpp  ui.cpp  ui.hpp
